# ChangeLog for media-video/handbrake
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*handbrake-0.9.4 (07 Sep 2010)

  07 Sep 2010; Steve Dibb <beandog@gentoo.org> +handbrake-0.9.4.ebuild:
  Initial commit; Original ebuild from Joshua Saddler
  <nightmorph@gentoo.org>, overnight overlay
