@@ -1,3 +1,23 @@
-DIST HandBrake-0.9.4.tar.bz2 1787142 RMD160 a150730cfcb16ee197ba8ec464133e38ab17539e SHA1 91329a83315b7eae0b2b3731a8bf0f2de2a6eb4d SHA256 706b03db4e39446dc47eee2eee298d4aaa3ebd925130e8a84fdc903f231300ee
-EBUILD handbrake-0.9.4.ebuild 1351 RMD160 58e7e57fcf6c3dccc3650a99804f5cc246f029cc SHA1 58750a71d5d41716b0c6c3f477d6a8f474943da3 SHA256 e23332adeb933cc6269e9b8dcad77da7076433ef07e16aa55a9a9f800e1575d5
+DIST a52dec-0.7.4-handbrake-0.9.5_p4039.tar.gz 242978 RMD160 5f8ff682a43ffdafdb88a4231bfa64bb40f138d8 SHA1 7c406b9b5351cdec56279b6d02f3f556711424d2 SHA256 54981ab08fc09a675b9924372cf0cca5aa5363b918c4c19065c2d40e2858be47
+DIST faac-1.28.tar.gz 678891 RMD160 03902393488f04223aabdc804bfe77bb32a61c94 SHA1 d00b023a3642f81bb1fb13d962a65079121396ee SHA256 c5141199f4cfb17d749c36ba8cfe4b25f838da67c22f0fec40228b6b9c3d19df
+DIST ffmpeg-git-v0.7b2-406-g7b20d35.tar.bz2 4091754 RMD160 e8a401a83cb1917f7eb3eb6569bd2185a2dae8b2 SHA1 f12a3f01d09d81f8575dbe93eaad2da15b8c8435 SHA256 7a2019ed1fb04c73d4af8b56d7668b1eab4278597f18d69136c061f2790c98bc
+DIST fontconfig-2.8.0.tar.gz 1548409 RMD160 fefee412cad4fa71b573e997e14f1df12f439be2 SHA1 570fb55eb14f2c92a7b470b941e9d35dbfafa716 SHA256 fa2a1c6eea654d9fce7a4b1220f10c99cdec848dccaf1625c01f076b31382335
+DIST freetype-2.3.9.tar.gz 1809558 RMD160 97fcb0fa731f5e0f279f22f7d49fadf5b79a196e SHA1 2c82a4f87b076c13d878129c8651645803585ff4 SHA256 3c3fc489c75af93e9f4367951114b0274bddef60d70ffe419b7e22cda210b9c0
+DIST handbrake-0.9.5_p4039.tar.bz2 3117911 RMD160 ea5e4697f687bbc4e87f410578d665950290794f SHA1 b64d2664d5c130a32a92e039a119ed21175a1047 SHA256 fc58187c8358338de0b9f449533e048f5c2f36abb90495d71ae9522690fea142
+DIST lame-3.98.tar.gz 1411318 RMD160 c10c20128622e16f9cac3d346bea8e390e4bfdc5 SHA1 2908edcf0628512c407aadad317866826c6df5c7 SHA256 40235e84dfe4760ad3f352590a64b7bda1502a386c97d06229df356426e37686
+DIST libass-0.9.9.tar.bz2 280779 RMD160 a9b535ebab05ee8c30363c207fe736c36ac1c378 SHA1 e95923d7833f9ec8aa4f826a6fe113ea30404ad5 SHA256 aa2df48567ec60ff05456419c723bcf5f5686fa54282cd20a2ffc26c9831858b
+DIST libbluray-0.0.1-pre-213-ga869da8.tar.gz 241927 RMD160 77ea3b642fa1b58fe3acef32ee457173586ed403 SHA1 760bee28398c89b52942f771f6087e2b32af2c65 SHA256 4aa7127201a5d3d4148d99c37c7701ede6e0707456dacc8a59464dc68e231b76
+DIST libdca-r81-strapped.tar.gz 523282 RMD160 f8af6ac0df89e221d0b95caf68ee3aa3904ab178 SHA1 aace1f940184fad9ec033de48f7d1efc3d0c0ffa SHA256 ab2519af6c2f12411a2bd674b83615af9b0d5fb09f28ad5dab714ea1bfab9df1
+DIST libdvdnav-svn1168.tar.gz 1844832 RMD160 9628b3cf9cf29bf617047da6c387552d35de5e3d SHA1 2e0b1cb2e215f231fcf7b94f8be6a4a4a6643e94 SHA256 7cf4ff6ab0b5d3db3c300fc3cdb24e1ad59f22dd90352df075a604bc698d01c7
+DIST libdvdread-svn1168.tar.gz 946033 RMD160 25d1460a175e4dedb0c463d0b2a9f1c826238c80 SHA1 f6db5b9b5cce837e0c3dfd34f9c434b243bfc6fa SHA256 a489b618962e31a2b151b2e6d7b0c3fcb42cccc196ec7cb352c559898c3f1f1e
+DIST libmkv-0.6.4.1-3-g62ce8b9.tar.gz 32395 RMD160 e738d15691c15d0829b8e54e2d51343537fa9ca4 SHA1 f4792a7c01dab8bb255d027f3ecc1350b70207aa SHA256 23e237695f6f81a9312a99d810a691e10dfa944183357db082c1146a021d00bc
+DIST libogg-1.1.3.tar.gz 401303 RMD160 fba18455f80b738239ccdd0fc19d518243140cce SHA1 9ce317cfe225e121deee68cd81db39f15b602caa SHA256 645676dd006c8424fde52df2edd0f52d6402b12c563b50c46e9540083241d50c
+DIST libsamplerate-0.1.4.tar.gz 4259244 RMD160 b2ac47d592702a410d5524e1550251c0e75f1879 SHA1 d6974129497ba141d43c36826a23deb6c0b3e5d8 SHA256 4b4af3ecaee05c8875a9b113c6a2f816f06f283fb882914e57b21c0b08b67b75
+DIST libtheora-1.1.0.tar.bz2 1785634 RMD160 c89c7d0622a89dbf2fcb5e6cf00c7e1bae42b0da SHA1 fb1686a8318d79f889f248ff774265d0ec4c6430 SHA256 74be9fe9f85d18c45bdcbb018cebf12c74e2234aeecb4d4c4cb92d80bdd287e2
+DIST libvorbis-aotuv_b5.tar.gz 1345888 RMD160 3c8cf3f1415cbbd037ec149427fda23e8a6dbe52 SHA1 ec446e9d2c480210ec8c5a02e479e52336450e3d SHA256 1e3c5b974e3d16a924eb0af12516a2b0b14aae24d46d32395cd997d833e84509
+DIST libxml2-2.7.7.tar.gz 4868502 RMD160 9f72c778c3e9e348a68eada0cf624c012658c085 SHA1 8592824a2788574a172cbddcdc72f734ff87abe3 SHA256 af5b781418ba4fff556fa43c50086658ea8a2f31909c2b625c2ce913a1d9eb68
+DIST mp4v2-trunk-r355.tar.bz2 475488 RMD160 cc942dd7f20bb943cccfd9443694ebbd63558818 SHA1 18a10807c5a05e0361e77d126599f8717ad7c8f5 SHA256 5b7d4e62df506b1246463da82cc2f02415eb462e6ccd5848f98f5cdcfc1f3d4f
+DIST mpeg2dec-0.5.1.tar.gz 522405 RMD160 3986798a30b33e689b1d7c5390380c13b74f8c76 SHA1 c39a95d18e133cd81e890fd7672f592ed41fadfc SHA256 161539061aa89864968a5150ed6c6a028a830c4868f7dd7c500732baef47fb71
+DIST x264-r1995-c1e60b9.tar.gz 608626 RMD160 e7bf926f9bd5e5d62cd61d5a814593e879bb9686 SHA1 0dbdc0c2875172d89318a7a2f0144d403dc56eb3 SHA256 5c5936ea57d4618f0d27a11253fc2cd9cd4eb4111f84e3d7d979c94f779325dc
+EBUILD handbrake-0.9.5_p4039.ebuild 2600 RMD160 992a6969a19461861999c2247fc8278c1101cb4e SHA1 48fa9858fd245461f5e8e76ad111ba9be9064dc0 SHA256 67c710d082730684c9ed6c7277a6041acb982f3e25825f0cc64cb4dec91299b1
 MISC ChangeLog 326 RMD160 400c79b469e8b7c072294103baeafa389b589cc2 SHA1 9472ae2ac268b586b351d65e669950f1bd879a80 SHA256 344588be101d1420ceca6d22c1d22d437ff4778325d0ff0e33248974b6acd0c6
