@@ -1,6 +1,12 @@
 # ChangeLog for media-video/handbrake
-# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+*handbrake-0.9.5_p4039 (11 Jun 2011)
+
+  11 Jun 2011; Steve Dibb <beandog@gentoo.org> -handbrake-0.9.4.ebuild,
+  +handbrake-0.9.5_p4039.ebuild:
+  Version bump, SVN snapshot; remove old
 
 *handbrake-0.9.4 (07 Sep 2010)
 
